added log and example Junit test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=springTest
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibersnate.dialect = org.hibernate.dialect.MySQL5Dialect
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=info
+logging.file=myapplication.log
